...

val NearestColorMatchList = listOf(
    ColorName("Black", 0xFF000000.toInt()),
    ColorName("Gray", 0xFF808080.toInt()),
    ColorName("White", 0xFFFFFFFF.toInt()),
    ColorName("Yellow", 0xFFFFFF00.toInt()),
    ColorName("Blue", 0xFF0000FF.toInt()),
    ColorName("Green", 0xFF00FF00 .toInt()),
    ColorName("Red", 0xFFFF0000.toInt()),
    ColorName("Brown", 0xFFA52A2A.toInt()),

)

...
