...
                                    addAllFunc(items)
                                }
                            }
                            .padding(8.dp)
                            .testTag("${TestTag.FILTER_PREFIX}${title}")
                    ) {
                        Text(text = "All")
                    }
                }

                items(items.size) { index ->
                    val item = items[index]
                    val isSelected = !filterExclude().contains(item)
...
